# cmake-deepspeech

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
audio/: Audio.cmake
lib/: Findaudiofile.cmake  Finddeepspeech.cmake  Findportaudio.cmake
lib/deepspeech/amd64.cpu.win/: libdeepspeech.so.if.lib
models/: Models.cmake
src/: CMakeLists.txt  audio.h  audio.h.in  deepsmartptrs.h  model.h  model.h.in  speech.cpp
